# aperture-tts

./: .dockerignore  .env.docker  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  flake.nix  gladoscorporatecore.py  main.py  pyproject.toml
.github/workflows/: docker-publish-model.yml  docker-publish-slack.yml
Model/: Portal_GLaDOS_v1_e782_s50000.safetensors  config.json  style_vectors.npy
aperture/: __init__.pyd  app.py  app_services.py  config.py  env.py  model.py  services.py  views.py
employee_daycare_center/: .env.sample  .gitignore  Dockerfile  app.py  clean.json.sample  entrypoint.sh  piccolo_conf.py  pyproject.toml
employee_daycare_center/glados_slack/: __main__.py  config.py  env.py  huddle_process_manager.py  piccolo_app.py  tables.py
employee_daycare_center/glados_slack/actions/: __init__.py  hello_world.py  settings.py
employee_daycare_center/glados_slack/callhandler/: Huddle.js  package-lock.json  package.json
employee_daycare_center/glados_slack/commands/: __init__.py  clearhuddles.py  join.py  leave.py  settings.py  soundboard.py
employee_daycare_center/glados_slack/events/: __init__.py  home_event.py  message.py
employee_daycare_center/glados_slack/piccolo_migrations/: glados_slack_2025_11_20t18_51_32_670331.py  glados_slack_2025_11_20t19_38_50_966394.py  glados_slack_2025_11_26t22_00_17_173963.py
employee_daycare_center/glados_slack/shortcuts/: __init__.py
employee_daycare_center/glados_slack/tasks/: __init__.py  huddle_leave.py
(+3 files in other folders)
