[project]
name = "aperture-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.121.0",
    "ipython>=9.7.0",
    "nltk>=3.9.2",
    "sentencepiece>=0.2.1",
    "style-bert-vits2>=2.5.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
